--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,8 @@
-# Core dependencies
-requests==2.31.0
-numpy==1.24.3
-python-dotenv==1.0.0
-openai==1.13.3
-colorama==0.4.6
-rich==13.7.0  # Rich text and formatting in the terminal
-
-# Linting tools
-flake8==7.0.0
-black==24.1.1
-isort==5.13.2
+requests>=2.27.1
+prompt_toolkit>=3.0.31
+rich>=12.6.0
+flake8>=6.0.0
+black>=23.1.0
+isort>=5.12.0
+pytest>=7.0.0
+autopep8>=2.0.0
