--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,17 @@
+[build-system]
+requires = ["setuptools>=42", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[project]
+name = "ai-agent"
+version = "0.2.0"
+description = "A file system agent with AI assistance"
+requires-python = ">=3.7"
+readme = "README.md"
+
+[project.scripts]
+agent = "agent.main:main"
+
 [tool.flake8]
 max-line-length = 20
 extend-ignore = "E203, W503"
